--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -516,20 +516,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "356cee95",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\michael\\AppData\\Local\\Temp\\ipykernel_30644\\3250902285.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  pm['Failure Type'] = pm['Failure Type'].replace({\n",
-      "C:\\Users\\michael\\AppData\\Local\\Temp\\ipykernel_30644\\3250902285.py:10: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  pm['Type'] = pm['Type'].replace({'L': 0, 'M': 1, 'H': 2})\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -649,7 +639,7 @@
        "4                    1408         40.0                9       0             0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,9 +653,9 @@
     "    'Overstrain Failure': 3,\n",
     "    'Heat Dissipation Failure': 4,\n",
     "    'Random Failures': 5\n",
-    "})\n",
+    "}).astype(int)\n",
     "\n",
-    "pm['Type'] = pm['Type'].replace({'L': 0, 'M': 1, 'H': 2})\n",
+    "pm['Type'] = pm['Type'].replace({'L': 0, 'M': 1, 'H': 2}).astype(int)\n",
     "pm.head()\n"
    ]
   },
